# 42_piscine_python

./: environment.sh  requirements.txt  setup.sh
module00/: count.py  exec.py  operations.py  whois.py
module00/ex00/: exec.py
module00/ex01/: whois.py
module00/ex02/: count.py
module00/ex04/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module00/ex05/: recipe.py
module00/ex06/: filterwords.py
module00/ex07/: sos.py
module00/ex08/: guess.py
module00/ex09/: loading.py
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: generator.py
module01/ex04/: __test.py  eval.py  test.py
module01/ex05/: account.py  banking_test3.py  the_bank.py
module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
module02/ex01/: main.py
module02/ex03/: csvreader.py
module02/ex04/: README.md  pyproject.toml
module02/ex04/src/my_minipack/: logger.py
module02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
module02/ex04/src/my_minipack_carce_bo.egg-info/: PKG-INFO  SOURCES.txt
module02/ex04/test/: test.py
module02/ex05/: TinyStatistician.py
moduleFinal/: avengers.py
